samples/_failures_safe/1761712196_3de7bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53cd89d9.c: In function ‘main’:
./samples/SAFE/__tmp_53cd89d9.c:141:16: error: missing terminating " character
  141 |         printf("Select operation
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_53cd89d9.c:141:9: error: expected expression at end of input
  141 |         printf("Select operation
      |         ^~~~~~
./samples/SAFE/__tmp_53cd89d9.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53cd89d9.c:141:9: error: expected declaration or statement at end of input
